--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# AdMob
+ADMOB_APP_ID=ca-app-pub-6720888069660182~2114756706
+#ADMOB_AD_UNIT_ID=ca-app-pub-6720888069660182/9792553285
+#Ad Test
+ADMOB_AD_UNIT_ID=ca-app-pub-3940256099942544/6300978111
